@@ -1,3 +1,6 @@
+2005-04-07  Fredrik Edemar  <f_edemar@linux.se>
+        * kchart_part.cc (KChartPart): Set modified when the chart type is changed.
+
 2005-04-10  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>
 
 	Fix the margins on the pie config page.
